# Photo-Email-Scheduler

./: .gitignore  Pipfile  README.md  email_sender.py  main.py  pyproject.toml  response_api.py  run_tests.py  test_email_sender.py  time_helper.py
.run/: Run all tests.run.xml
tests/: test_email_sender.py  test_response_api.py  test_time_helper.py
